--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,27 +12,13 @@ html::-webkit-scrollbar{
     background-color: black;
 }
 
-#mytext1 .char{
-    transform: translateY(190px);
-    
-    
-}
-#mytext2 .char{
-    transform: translateY(190px);
-    
-    
-    
-    transition: transform 0s 0.01s ;
-    
-}
-#mytext1{
-    clip-path: inset(0 0 0 0 round 0%);
 
-}
-#mytext2{
-    clip-path: inset(0 0 0 0 round 0%);
 
+
+.line{
+    clip-path: inset(0 0 0 0 round 0%);
 }
+
 
 @layer components {
 
