--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,9 @@ html::-webkit-scrollbar{
 
 @layer components {
 
-
+h1,h2,h3,h4,h5,h6,p{
+    cursor: default;
+}
 
 .myContainer{
     @apply  xsm:w-[380px] sm:w-[620px] md:w-[740px] lg:w-[980px] xl:w-[1240px]  2xl:w-[1440px] mx-auto  ;
