--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,141 @@ html::-webkit-scrollbar{
     background-color: black;
 }
 
+.radio-buttons-container {
+  display: flex;
+  margin: 50px auto;
+  align-items: center;
+  justify-items: center;
+  gap: 80px;
+  width: 100%;
+}
 
+.radio-button {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+}
+
+.radio-button__input {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.radio-button__label {
+  display: inline-block;
+  padding-left: 40px;
+  margin-bottom: 10px;
+  position: relative;
+  font-size: 40px;
+  color: #000;
+  cursor: pointer;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.radio-button__custom {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 2px solid #000;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.radio-button__input:checked + .radio-button__label .radio-button__custom {
+  transform: translateY(-50%) scale(0.9);
+  border: 5px solid #00A8B7;
+  color: #00A8B7;
+}
+
+.radio-button__input:checked + .radio-button__label {
+  color: #00A8B7;
+}
+
+.radio-button__label:hover .radio-button__custom {
+  transform: translateY(-50%) scale(1.2);
+  border-color: #00A8B7;
+  box-shadow: 0 0 10px #00A8B7;
+}
+
+
+
+
+.input-container {
+    position: relative;
+    margin: 50px auto;
+    width: 100%;
+  }
+  
+  .input-container input 
+  {
+    font-size: 20px;
+    width: 100%;
+    border: none;
+    border-bottom: 2px solid  rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    font-weight: 500;
+    padding: 5px 0;
+    background-color: transparent;
+    outline: none;
+  }
+  
+  .input-container .label {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    color: #000;
+    opacity: 0.7;
+    transition: all 0.3s ease;
+    pointer-events: none;
+    font-size: 50px;
+  }
+  
+  .input-container input:focus ~ .label ,
+  .input-container input:valid ~ .label{
+    bottom: 120%;
+    font-size: 30px;
+    color: #000;
+    opacity: 1;
+  }
+  
+  .input-container .underline {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: #000;
+    opacity: 1;
+    transform: scaleX(0);
+    transform-origin:left;
+    transition: all 0.3s ease;
+  }
+  
+  .input-container input:focus ~ .underline,
+  .input-container input:valid ~ .underline {
+    transform: scaleX(1);
+    opacity: 1;
+  }
+  
+
+.bounds{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: all;
+    transform: scaleX(1.2) scaleY(1.5);
+}
+.bounds:hover{
+    transform: scaleX(1.6) scaleY(2.6);
+    
+}
 
 .line{
     clip-path: inset(0 0 0 0 round 0%);
