--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,15 @@ scale: 3;
   color: #00A8B7;
 }
 
+::selection {
+  background: #00A8B7;
+}
+
+.gradient{
+  background: rgb(0,168,183);
+background: radial-gradient(circle, rgba(0,168,183,1) 0%,rgba(0,168,183,0.6) 50%, rgba(8,9,10,0) 80%, rgba(8,9,10,0) 100%);
+}
+
 .radio-button__label:hover .radio-button__custom {
   transform: translateY(-50%) scale(1.2);
   border-color: #00A8B7;
@@ -165,6 +174,9 @@ h1,h2,h3,h4,h5,h6,p{
 
 .myContainer{
     @apply  w-[380px] sm:w-[620px] md:w-[740px] lg:w-[980px] xl:w-[1240px]  2xl:w-[1440px] 3xl:w-[1640px] mx-auto  ;
+}
+.klkl{
+  mask:url(#mask);
 }
 
 
