--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -176,7 +176,16 @@ background: radial-gradient(circle, rgb(255, 255, 255) 0%,rgba(255,255,255,0.6) 
 }
 
 
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hidden {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
 @layer components {
+
 
 h1,h2,h3,h4,h5,h6,p{
     cursor: default;
